[gd_scene load_steps=6 format=3 uid="uid://d2k22pyyrfqrd"]

[ext_resource type="Script" path="res://Title.gd" id="1_yr04g"]
[ext_resource type="FontFile" uid="uid://dewb8w3jpive4" path="res://font/Stamp Amy PK V Two.otf" id="2_p0562"]
[ext_resource type="AudioStream" uid="uid://lnxw4w83vai7" path="res://se/BGM.mp3" id="3_dsov4"]
[ext_resource type="Theme" uid="uid://ovju54setj2w" path="res://new_theme.tres" id="3_gep6y"]
[ext_resource type="ButtonGroup" uid="uid://cyxpmq8mhpebg" path="res://radio_button_group.tres" id="4_a3ptf"]

[node name="GameOver" type="Node2D"]
script = ExtResource("1_yr04g")
metadata/_edit_horizontal_guides_ = [-69.0]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1150.0
offset_bottom = 648.0

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 0
offset_right = 1153.0
offset_bottom = 646.0

[node name="Label" type="Label" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -293.0
offset_right = 293.0
offset_bottom = 282.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_p0562")
theme_override_font_sizes/font_size = 80
text = "Don't stop my laughter"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RestartButton" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = 72.5
offset_right = 200.0
offset_bottom = 149.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_p0562")
theme_override_font_sizes/font_size = 50
text = "GameStart"

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -167.0
offset_top = -56.0
offset_right = 167.0
offset_bottom = 59.0
grow_horizontal = 2
grow_vertical = 2

[node name="Select DifficultyText" type="Label" parent="Control/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_p0562")
theme_override_font_sizes/font_size = 27
text = "Select Difficulty
"
horizontal_alignment = 1

[node name="CheckBox" type="CheckBox" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("3_gep6y")
theme_override_fonts/font = ExtResource("2_p0562")
theme_override_font_sizes/font_size = 25
button_group = ExtResource("4_a3ptf")
text = "Easy  "
alignment = 1
icon_alignment = 1

[node name="CheckBox2" type="CheckBox" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("3_gep6y")
theme_override_fonts/font = ExtResource("2_p0562")
theme_override_font_sizes/font_size = 25
button_group = ExtResource("4_a3ptf")
text = "Normal"
alignment = 1
icon_alignment = 1

[node name="CheckBox3" type="CheckBox" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("3_gep6y")
theme_override_fonts/font = ExtResource("2_p0562")
theme_override_font_sizes/font_size = 25
button_group = ExtResource("4_a3ptf")
text = "Hard  "
alignment = 1
icon_alignment = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_dsov4")
autoplay = true

[connection signal="pressed" from="Control/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="toggled" from="Control/VBoxContainer/CheckBox" to="." method="_on_check_box_toggled"]
[connection signal="toggled" from="Control/VBoxContainer/CheckBox2" to="." method="_on_check_box_2_toggled"]
[connection signal="toggled" from="Control/VBoxContainer/CheckBox3" to="." method="_on_check_box_3_toggled"]
